# word-sys-pdf-editor

./: .gitignore  CHANGELOG.md  README.md  build-appimage.sh  build_release.sh  pyproject.toml  word-sys-pdf-editor.desktop
.github/workflows/: build.yml  release.yml
debian/: changelog  word-sys-pdf-editor.desktop
word_sys_pdf_editor/: constants.py  i18n.py  main.py  models.py  pdf_handler.py  print_handler.py  ui_components.py  undo_manager.py  utils.py  welcome_view.py  window.py
word_sys_pdf_editor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
