[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "word-sys-pdf-editor"
description = "An open-source tool for editing content in PDF files on Linux"
readme = "README.md"
authors = [
    { name = "Barın Güzeldemirci (word-sys)" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF",
    "numpy",
    "pygobject"
]

[project.urls]
Homepage = "https://github.com/word-sys/word-sys-pdf-editor/"
Source = "https://github.com/word-sys/word-sys-pdf-editor/"
Issues = "https://github.com/word-sys/word-sys-pdf-editor/issues"
Releases = "https://github.com/word-sys/word-sys-pdf-editor/releases"

[tool.setuptools]
packages = ["word_sys_pdf_editor"]

[tool.setuptools.dynamic]
version = {attr = "word_sys_pdf_editor.constants.APP_VERSION"}

[project.gui-scripts]
word-sys-pdf-editor = "word_sys_pdf_editor.main:main"
